--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,7 +30,7 @@ header {
     width: 100%;
     height: 600px;
      /* fallback for old browsers */
-    background: #2980B9; 
+    background: #660E0E; 
      /* Chrome 10-25, Safari 5.1-6 */
     background: -webkit-linear-gradient(to right, #FFFFFF, #fc6161, #d10101),url(../img/portada.jpg);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
