--- a/css/estilos.css
+++ b/css/estilos.css
@@ -491,7 +491,7 @@ ul.show{
         font-weight:bold;
     }
     .menu_items li a:hover{
-        color:#3498db ;
+        color:#660E0E ;
     }
     .logo{
         font-size:25px;
