--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,8 +30,8 @@ header {
     width: 100%;
     height: 600px;
     background: #D31027;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #EA384D, #D31027);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, hsla(353, 81%, 57%, 0.416), hsla(353, 86%, 45%, 0.532)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #EA384D, #D31027), url(../img/portada.jpg); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, hsla(353, 81%, 57%, 0.416), hsla(353, 86%, 45%, 0.532)), url(../img/portada.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 */
     background-size: cover;
     background-attachment: fixed;
